--- a/draft.ipynb
+++ b/draft.ipynb
@@ -33,8 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "35dd076f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "li1 = [1,2,3]\n",
+    "li2 = [4]\n",
+    "np.append(li1, li2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7dad413",
    "metadata": {},
    "outputs": [],
    "source": []
